# pg-save

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  age_sex_social_administrative_units_22.02.2022.csv  df-saver.py  dump_db_23.03.2022.csv  env_default.txt  municipalities_23.03.2022.csv  physical_objects_18.03.2022.csv  physical_objects_21.03.2022.csv  pyproject.toml  requirements.txt  saver.py
pg_save/: __init__.py  __main__.py
pg_save/cli/: __init__.py  describe_table.py  group.py  interactive.py  list_tables.py  query.py  select_table.py
pg_save/database_description/: __init__.py  table_info.py  tables_list.py
pg_save/dtos/: __init__.py  database.py
pg_save/exceptions/: __init__.py  db_connect.py  table_not_fonud.py  unsafe_expression.py
pg_save/export/: __init__.py  csv.py  default_crs.py  excel.py  geojson.py  json.py  united.py
pg_save/query/: __init__.py
pg_save/querying/: __init__.py  query.py  table.py
pg_save/utils/: __init__.py  dotenv.py  interactive.py  np_encoder.py  pd.py  print.py
