[tool.poetry]
name = "pg-save"
version = "0.3.2"
description = "An utility to export Postgres table data to a various formats without having GeoPandas as a requirement"
authors = [
    "Aleksei Sokol <kanootoko@gmail.com>",
    "George Kontsevik <george.kontsevik@gmail.com>",
]
license = "MIT"
readme = "README.md"
packages = [{ include = "pg_save" }]
repository = "https://github.com/kanootoko/pg-save"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/kanootoko/pg-save/issues"

[tool.poetry.scripts]
pg-save = "pg_save.cli:main"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.6"
pandas = "^2.0.3"
numpy = "^1.25.1"
loguru = "^0.7.0"
pyxlsx = "^1.1.3"
psycopg2 = "^2.9.6"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pylint = "^3.3.2"
isort = "^5.12.0"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
target-version = ['py39']
line-length = 120

[tool.pylint.format]
max-line-length = 120
ignored-modules = ["psycopg2.errors"]
disable = ["duplicate-code"]

[tool.isort]
py_version = 39
lines_after_imports = 2
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
